# DirectXShaderCompiler

./: CMakeLists.txt  build.py  copy_dxc.py  hlsl_output.hlsl
.agents/: backend_mc_report.md  build_utils_report.md  clang_frontend_report.md  debug_pix_dia_report.md  docs_report.md  dxil_infrastructure_report.md  external_report.md  hlsl_dxil_core_report.md  include_report.md  llvm_core_report.md  llvm_infrastructure_report.md  misc_report.md  project_structure.md  testing_report.md  tools_report.md
.agents/skills/optimize/: SKILL.md
.agents/skills/optimize/references/: dxil-passes.md  spirv-passes.md  summary.md
.agents/skills/project_structure/: SKILL.md
.agents/skills/project_structure/references/: summaries.md
.agents/skills/test/: SKILL.md
cmake/modules/: HandleLLVMOptions.cmake
docs/: DXIL.rst
include/dxc/DXIL/: DxilCompType.h
lib/DXIL/: DxilCompType.cpp  DxilOperations.cpp  DxilUtil.cpp
lib/DxilValidation/: DxilValidation.cpp
lib/HLSL/: DxilContainerReflection.cpp  DxilPromoteResourcePasses.cpp  HLOperationLower.cpp
tools/clang/lib/AST/: ASTContextHLSL.cpp
tools/clang/lib/CodeGen/: CGHLSLMS.cpp  CGHLSLMSFinishCodeGen.cpp  CGRecordLayoutBuilder.cpp
tools/clang/lib/Lex/: CMakeLists.txt
tools/clang/lib/SPIRV/: CapabilityVisitor.cpp  LowerTypeVisitor.cpp  SpirvContext.cpp  SpirvEmitter.cpp
tools/clang/lib/Sema/: SemaHLSL.cpp
tools/clang/test/: CMakeLists.txt
tools/clang/test/CodeGenSPIRV/: binary-op.8bit.hlsl  buffer.8bit.hlsl  (+23 more)
tools/clang/unittests/HLSLTestLib/: CMakeLists.txt
utils/hct/: hctdb.py
utils/lit/lit/: TestRunner.py
(+26 files in other folders)
